Update on Overleaf.

--- a/ExSummary.tex
+++ b/ExSummary.tex
@@ -61,23 +61,28 @@ Long-term time series of EMEP ozone measurements show a downward trend in the me
 
 
 \subsubsection*{Status of emission reporting}
-In 2020, 43 out of 51 Parties (84$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 40 Parties reported black carbon (BC) emissions, 38 of them for the year 2018. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
+In 2021, 48 out of 51 Parties (94$\%$) submitted emission inventories to the EMEP Centre on Emission Inventories and Projections (CEIP), and 42 Parties reported black carbon (BC) emissions. As 2021 is a reporting year for large point sources (LPS) and gridded emissions, 32 Parties reported information on LPS, 26 Parties reported gridded data. The quality of reported emission data differs significantly across countries, and the uncertainty of the data is considered to be relatively high.
 
-%\textcolor{blue}{HF:disregard this
-%The condensable organic component of particulate matter is probably the biggest single source of %uncertainty in PM emissions. Currently the condensable component is not included or excluded consistently %in PM emissions reported by Parties of the LRTAP Convention. Also in the EMEP/EEA Guidebook the %condensable fraction is not consistently included or excluded in the emission factors. Thus, at the %moment PM emissions reported by Parties to the LRTAP Convention are not directly comparable, which has %implications on the modelling of overall exposure to PM. }
-%\textcolor{blue}{HF:Will move
-%In 2019 and 2020, Parties have been asked to include a table with information on the condensable component %in PM$_{10}$ and PM$_{2.5}$
-%emission factors for the reporting under the CLRTAP convention. This table was added to the revised
-%recommended structure for informative inventory reports. This year, 21 Parties provided such information. 
-%The status of inclusion or exclusion is best known for the emissions from the energy sector and road %transport, while it is less clear for small-scale combustion, which is one of the sources where the %inclusion of the condensable component has the largest impact on the emission factor.
+Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
+Previous work has clearly shown that the definitions behind national emission estimates are inconsistent in their treatment of condensable organics: some countries explicitly do not include condensables in their PM inventories, some likely include condensables and for some it is mixed or unclear.
 
-2017 was the first year with reporting obligation of gridded emissions in 0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. 
-Until June 2020, 32 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution.
-For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
-Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2018.
-%, provided via ECCAD {\it CAMS\_GLOB\_SHIP}.
+Parties were asked to include a table with information on the condensable component in their reporting of PM emissions. This year, 23 Parties provided such information. 
+The treatment of condensable organics in emission factors is best known for the emissions from the energy sector and road transport, while it is less clear for small-scale combustion, which is one of the sources where the largest impact on the emission factor occur.
 
-The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that Czechia had not reduced its NMVOC emissions according to the Gothenburg Protocol requirements, and that Croatia, Denmark, Germany, Norway and Spain are above their Gothenburg Protocol ceilings for \nhiii. In terms of \nox emissions, Norway exceeded its ceilings. For \sox all countries were below their individual ceilings.
+In March 2020, MSC-W hosted an expert workshop on condensables, which brought together experts in emissions, measurements, inventories, and policy from Europe and North America, and created a much better understanding of the issues and
+possible approaches for dealing with this important class of compounds.
+Discussions at the NMR workshop confirmed that even when countries did include condensables, there were significant differences in the methodologies used.
+To improve the quality of the input data for air quality models,  and following a decision of the EMEP Bureaux, the group of experts at the NMR workshop agreed on the following approach: 1) in year one (2020) the so-called REF2 emission data provided by TNO, which include condensable organics,  is used in an initial estimate for residential combustion emissions and 2) in subsequent years these top-down estimates should be increasingly replaced by national estimates once procedures for quantifying condensables in a more harmonized way are agreed on and implemented. 
+
+Therefore, the assessment of the air quality situation in Europe and source receptor calculations for 2019 made this year, have been conducted with official EMEP emissions combined with TNO REF2.1 emissions for the GNFR sector C for PM (EMEPwREF2.1C). CEIP in co-operation with TNO prepared a list of Parties where it could be assumed with a good degree of certainty that the condensable component is mostly included in PM emissions for GNFR sector C. For these Parties the reported PM emissions were used, while for other Parties the TNO REF2.1 data were used for GNFR sector C in the EMEPwREF2.1C dataset.
+
+The 1999 Gothenburg Protocol lists emission reduction commitments of NO$_x$, SO$_x$, NH$_3$ and NMVOCs for most of the Parties to the LRTAP Convention for the year 2010. These commitments should not be exceeded in 2010 nor in subsequent years. When considering only reported data, approved adjustments and fuel use data of the respective countries, it can be seen that in the year 2019 North Macedonia could not reduce their \sox emissions below their respective Gothenburg Protocol requirements, and that Croatia and Spain are above their 1999 Gothenburg Protocol ceilings concerning \nhiii. For \nox and NMVOC all countries were below their individual ceilings in year 2019.
+
+After the first round of submissions in 2017, 2021 was the second year for which EMEP countries were obliged to report gridded emissions in  0.1{\degrees}$\times$0.1{\degrees} lon\-gi\-tude/la\-ti\-tude resolution. Until June 2021, 34 of the 48 countries which are considered to be part of the EMEP area reported sectoral gridded emissions in this resolution. For remaining areas, missing emissions are gap-filled and spatially distributed using expert estimates.
+
+Emissions from international shipping in different European seas were estimated based on the CAMS global shipping emission dataset for the year 2019.
+
+
 
 \subsubsection*{Condensable organics: model evaluation and source receptor matrices for 2018}
 Estimates of PM emissions as currently provided by Parties have a number of major uncertainties, and there is a clear need for clarification and standardisation of the methods used to define and report PM emissions. 
