--- a/NILU.bib
+++ b/NILU.bib
@@ -162,6 +162,7 @@ PAGES = {13339--13357},
 URL = {https://www.atmos-chem-phys.net/11/13339/2011/},
 DOI = {10.5194/acp-11-13339-2011}
 }
+
 @Article{Yttri2019,
   author    = {Yttri, Karl Espen and Simpson, David and Bergstrom, Robert and Kiss, Gyula and Szidat, Sonke and Ceburnis, Darius and Eckhardt, Sabine and Hueglin, Christoph and Nojgaard, Jacob Kleno and Perrino, Cinzia and Pisso, Ignazio and Prevot, Andre Stephan Henry and Putaud, Jean-Philippe and Spindler, Gerald and Vana, Milan and Zhang, Yan-Lin and Aas, Wenche},
   title     = {{The EMEP Intensive Measurement Period campaign, 2008-2009: characterizing carbonaceous aerosol at nine rural sites in Europe}},
@@ -176,7 +177,6 @@ DOI = {10.5194/acp-11-13339-2011}
   eissn     = {1680-7324},
   unique-id = {ISI:000463364000004},
 }
-
 
 
 @Article{Hoerger2015,
@@ -315,8 +315,8 @@ DOI = {10.5194/acp-18-10199-2018}
 @Article{Theobald2019,
 AUTHOR = {Theobald, M. R. and Vivanco, M. G. and Aas, W. and Andersson, C. and Ciarelli, G. and Couvidat, F. and Cuvelier, K. and Manders, A. and Mircea, M. and Pay, M.-T. and Tsyro, S. and Adani, M. and Bergstr\"om, R. and Bessagnet, B. and Briganti, G. and Cappelletti, A. and D'Isidoro, M. and Fagerli, H. and Mar, K. and Otero, N. and Raffort, V. and Roustan, Y. and Schaap, M. and Wind, P. and Colette, A.},
 TITLE = {An evaluation of European nitrogen and sulfur wet deposition and their
-trends estimated by six chemistry transport models for \hack{\break}the
-period 1990--2010},
+trends estimated by six chemistry transport models for
+the period 1990--2010},
 JOURNAL = {Atmospheric Chemistry and Physics},
 VOLUME = {19},
 YEAR = {2019},
@@ -386,3 +386,13 @@ PAGES = {3099--3126},
 URL = {https://acp.copernicus.org/articles/16/3099/2016/},
 DOI = {10.5194/acp-16-3099-2016}
 }
+
+@article{Platt20XX,
+ author={Platt, S. {M. et al.}},
+ title={Source apportionment of equivalent black carbon from the winter 2017–2018 EMEP intensive measurement campaign using PMF},
+ journal = {in preparation},
+ volume = {},
+ year = 2021
+}
+
+
