--- a/chapterEmis2019.tex
+++ b/chapterEmis2019.tex
@@ -383,7 +383,7 @@ This chapter summarises the status of emissions reporting by LRTAP Convention Pa
 
 The 2021 EMEP emissions datasets for modellers therefore need to be complied carefully and this chapter documents for which countries and pollutants the time series have been based fully or partially on reported inventories and gridded data, and for which countries and regions the datasets have been built using independent emissions data products.
 
-Based on the complied datasets in 2021, it is worth noting that the 2000 to 2019 trends in emissions from the land areas have been increased for most pollutants except for PM$_{coarse}$  and \nhiii. This trend appears to be driven by the trends of the EMEP West countries, for which the time series are based almost completely on reported data. In contrast, EMEP East as whole shows a rather stable trend in terms of emissions (emissions based partially on reported data), with notable emissions increases shown for the 'Other areas' (based completely on independent estimates). International shipping emissions had been shown to be decreasing up to 2018; however, a notable jump in 2018  to 2019 emissions of all pollutants likely stems from a methodological artefact, whereby the number of smaller vessels using AIS systems (on which the CAMS global shipping dataset is based) seems to have increased.
+Based on the complied datasets in 2021, it is worth noting that the 2000 to 2019 trends in emissions from the land areas have decreased for most pollutants except for PM$_{coarse}$  and \nhiii. This trend appears to be driven by the trends of the EMEP West countries, for which the time series are based almost completely on reported data. In contrast, EMEP East as whole shows a rather stable trend in terms of emissions (emissions based partially on reported data), with notable emissions increases shown for the 'Other areas' (based completely on independent estimates). International shipping emissions had been shown to be decreasing up to 2018; however, a notable jump in 2018  to 2019 emissions of all pollutants likely stems from a methodological artefact, whereby the number of smaller vessels using AIS systems (on which the CAMS global shipping dataset is based) seems to have increased.
 
 \clearpage
 \bibliographystyle{copernicus}         % change bibliography-name after each
