--- a/chapterTrendsECOC.tex
+++ b/chapterTrendsECOC.tex
@@ -1,8 +1,11 @@
-\subsection{Elemental Carbon}
+\section{Trends in Elemental and Organic Carbon}
+\label{sec:trendsECOC}
+\subsection{Elemental Carbon, EC}
 \label{ss:trendsEC}
 
 
 \begin{figure}
+\includegraphics[width=16cm]{FIGS_TRENDS/ECOC_trends.png}
 \caption{Observed and modeled concentrations and trends of EC and OC at 15 EMEP
   site across Europe for 2010--2020, showing the concentrations
   (left panels) of OC (upper) and EC (lower), aggregated annual and
@@ -19,7 +22,7 @@
 \end{figure}
 
 A 4.5$\pm$1.5\%/yr reduction 
- \COMMENT{DS: changed - xx reduction to just xx reduction}
+ \COMMENT{DS: changed - xx reduction to just xx reduction. Should be careful throughout...}
 in elemental carbon (EC) for 2010--2020 was
 calculated for the 15 sites assessed (Fig.~\ref{fig:KEX1}, Tab.~\ref{tab:KEX1}),
 being quite comparable to the reduction (-5.0$\pm$0.9\%/yr)
@@ -71,10 +74,28 @@ for the observations.
 
 \begin{table}
  \caption{Absolute change ( \ugC/yr) and relative change (\%/yr) and
-  corresponding confidence intervals in observed and modeled annual
+  corresponding confidence intervals in observed and modelled annual
   and seasonal aggregated EC concentrations at 15 sites across Europe
   for 2010--2020. The number of sites with a significant outcome is
   provided. \label{tab:KEX1}}
+% \begin{tabular}{lrrrrlrlrlrl}
+%\begin{center}
+\scalebox{0.70}{%
+\begin{tabular}{llcc|cccc|cccc}
+%\toprule
+\hline
+               \multicolumn{4}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+ Season &           total & sign.(obs.) & sign.(mod.) &                   obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
+%\midrule
+\hline
+all    &              15 &         11 &          12 &                  -0.019 &  (-0.031, -0.008) & -0.014 &  (-0.021, -0.007) &                    -4.49 &  (-5.25, -3.73) & -3.81 &  (-4.59, -3.03) \\
+winter &              15 &          6 &           4 &                  -0.029 &  (-0.053, -0.006) & -0.019 &  (-0.032, -0.006) &                    -4.27 &  (-5.49, -3.06) & -3.10 &  (-4.21, -1.98) \\
+spring &              15 &          5 &           8 &                  -0.012 &  (-0.018, -0.006) & -0.013 &  (-0.018, -0.009) &                    -3.88 &  (-4.67, -3.09) & -3.86 &   (-4.92, -2.8) \\
+summer &              15 &          8 &          10 &                  -0.011 &  (-0.015, -0.007) & -0.008 &  (-0.013, -0.004) &                    -4.73 &  (-5.71, -3.74) & -3.71 &  (-4.59,  -2.82) \\
+autumn &              15 &          8 &          11 &                  -0.023 &   (-0.036, -0.01) & -0.018 &  (-0.027, -0.009) &                    -4.96 &   (-6.03, -3.9) & -4.25 &  (-5.15,  -3.35) \\
+ \hline % bottomrule
+\end{tabular}
+}
 \end{table}
 
 
@@ -97,6 +118,7 @@ is a possible explanation \citep{Bergstrom2012,Yttri2021}, although a
 less successful abatement of anthropogenic sources cannot be excluded.
 
 \begin{figure}
+
 \caption{Map showing relative change (\%/yr) in observed and modeled OC (left
   panel) and EC (right panel) at 15 EMEP sites across Europe. \label{fig:KEX2}}
 \end{figure}
@@ -132,6 +154,8 @@ reproducing the seasonality in trend seen for the observations. A decrease
 in observed OC was calculated for all sites, whereas the model calculated
 an increase, typically <0.5\%/yr, for four of the sites.
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \begin{table}
  \caption{Absolute change ( \ugC/yr) and relative change (\%/yr) and
    corresponding confidence intervals in observed and modeled annual
@@ -139,14 +163,32 @@ an increase, typically <0.5\%/yr, for four of the sites.
    for 2010--2020. The number of sites with a significant outcome
    is provided. \label{tab:KEX2}
  }
+ 
+%\begin{center}
+\scalebox{0.70}{%
+\begin{tabular}{llcc|cccc|cccc}
+\hline % toprule
+\multicolumn{4}{c}{Number of sites} & \multicolumn{4}{c}{Average change per year (\ug $yr^{-1})$} & \multicolumn{4}{c}{Relative change per year (\% $yr^{-1}$)} \\
+Seasons &  No. & sign.(obs.) & sign.(mod.) &                    obs. &          conf.interval &  mod. &          conf.interval &                     obs. &         conf.interval &  mod. &        conf.interval \\
+\hline % midrule
+all    &              15 &          2 &           1 &                  -0.077 &  (-0.132, -0.022) & -0.009 &     (-0.019, 0.0) &                    -2.40 &  (-3.23, -1.57) & -0.59 &   (-1.21, 0.03) \\
+winter &              15 &          6 &           1 &                  -0.148 &  (-0.249, -0.047) & -0.018 &  (-0.032, -0.004) &                    -4.19 &  (-5.16, -3.22) & -1.09 &  (-2.03, -0.15) \\
+spring &              15 &          1 &           0 &                  -0.067 &   (-0.104, -0.03) & -0.013 &  (-0.023, -0.003) &                    -2.18 &  (-3.68, -0.67) & -0.74 &   (-1.94, 0.47) \\
+summer &              15 &          0 &           1 &                  -0.000 &   (-0.024, 0.023) &  0.019 &   (-0.003, 0.041) &                    -0.03 &   (-1.19, 1.12) &  2.13 &    (0.44, 3.83) \\
+autumn &              15 &          1 &           0 &                  -0.098 &   (-0.16, -0.037) & -0.020 &     (-0.041, 0.0) &                    -3.03 &  (-4.43, -1.62) & -1.16 &   (-2.47, 0.15) \\
+\hline % bottomrule
+\end{tabular}
+} % end scalebox
 \end{table}
 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \subsection{OC and EC fractions of PM}
 \label{ss:OCECfrac}
 
 
 \begin{figure}
+\includegraphics[width=16cm]{FIGS_TRENDS/ECOC_ratio_trends.png}
  \caption{Observed and modeled ratios and trends of OC/\pmfine and EC/\pmfine for
   15 EMEP sites across Europe for 2010--2020, showing the trends
   (left panels) of OC/\pmfine (upper) and EC (lower), aggregated annual and
@@ -231,6 +273,34 @@ of OM.
    for 2010--2020. The number of sites with a significant outcome
    is provided.\label{tab:KEX3}
  }
+ \scalebox{0.70}{%
+ \begin{tabular}{lcccccc}
+\hline  % toprule
+ &  &  &  &  &  &  \\
+\multicolumn{7}{c}{EC/\pmfine (2010--2020)} \\
+  &  &  &  &  &  &  \\
+     \multicolumn{3}{c}{Number of sites} & \multicolumn{2}{l}{Average change per year} & \multicolumn{2}{l}{Relative change per year} \\
+{} &           total & sign. &                     abs &       Conf. interv. &                      \%/y &   Conf. interv. \\
+%How   &                 &       &                         &                     &                          &                 \\
+\hline  % midrule
+Model &              15 &     5 &                 -0.0006 &  (-0.0009, -0.0004) &                    -1.71 &   (-2.32, -1.1) \\
+Obs.  &              15 &     4 &                 -0.0009 &  (-0.0012, -0.0006) &                    -2.41 &  (-2.96, -1.85) \\
+\hline  % bottomrule
+% \end{tabular}
+   &  &  &  &  &  &  \\
+\multicolumn{7}{c}{OC/\pmfine (2010--2020)} \\
+   &  &  &  &  &  &  \\
+% \begin{tabular}{lrrrlrl}
+\toprule
+   \multicolumn{3}{c}{Number of sites} & \multicolumn{2}{l}{Average change per year} & \multicolumn{2}{l}{Relative change per year} \\
+{} &           total & sign. &                     abs &     Conf. interv. &                      \%/y &  Conf. interv. \\
+%How   &                 &       &                         &                   &                          &                \\
+\hline  % midrule
+Model &              15 &     7 &                  0.0029 &   (0.0018, 0.004) &                     2.35 &     (1.3, 3.4) \\
+Obs.  &              15 &     2 &                  0.0001 &  (-0.003, 0.0032) &                     0.19 &  (-1.24, 1.62) \\
+\hline  % bottomrule
+\end{tabular}
+} % end scalebox
 \end{table}
 
 \subsection{Conclusion}
@@ -266,8 +336,8 @@ less than for the observations (-2.4\%/yr). A similar underprediction
 was seen for each season, thereby reproducing the seasonality in trend
 seen for the observations.
 
-The EC fraction of \pmfine (-2.4$\pm$1.1 \%/yr) decreased at all
-sites, and at a level equal as, or higher than, the \ce{SO42-} fraction. The
+The EC fraction of \pmfine (\QUERY{trend }-2.4$\pm$1.1 \%/yr) decreased at all
+sites, and at a level equal as, or higher than, the \ce{SO4^2-} fraction. The
 change in OC fraction was more scattered with a substantial and
 consistent 4.5\%/yr increase at the northernmost sites, whereas
 there was no increase or decrease (0.2$\pm$2.8\%/yr) when considering
@@ -285,4 +355,4 @@ fraction to get a quantitative overview of the abatable fractions.
 \bibliographystyle{copernicus}         % change bibliography-name after each
 \renewcommand\bibname{References}      % bibliographystyle command!
 \addcontentsline{toc}{section}{References}
-\bibliography{Refs,NILU,EMEP_Reports}
+\bibliography{trends,Refs,EMEP_Reports,NILU,RefsUpdates}
