--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -8,7 +8,7 @@
 \section{\label{sec:Trends_introduction}Introduction and background}
 At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012.
 
-In order to review the progress made towards achieving the environmental and health objectives of the Protocol, a
+In order to assess  the progress made towards achieving the environmental and health objectives of the Protocol, a
 list of questions was given to the subsidiary bodies of the Air Convention.
 
 Several of the questions were related to the trends of air pollution in Europe, and to what extent they follow the reported trends in emissions
@@ -172,7 +172,7 @@ The agreement between the trends calculated from observations and from the model
 
 The trends in wet deposition of oxidized nitrogen reflects the long range transported oxidized nitrogen (NO$_x$ that has been converted to nitric acid and particulate nitrate and then washed out by rain) and is less sensitive to local changes. Also the trends for wet deposition of nitrate are lower in the observations than in the model calculations (and emissions of NOx) for the 2000-2019 period. Whilst the average trend in observations are -1.4\% yr$^{-1}$ (total of -26\%), the model calculates the trend at the same sites to be -2.1 \% yr$^{-1}$ (total of -40\%), close to the trends in emissions from the western EMEP domain (-48\%). The difference between the trend in observations (and emissions?) are largest during the first period, similar to the results for NO$_2$. However, the model overestimates nitrate wet deposition somewhat up to around 2010, and are then shifted downward and in very good agreement with observations for the years after. Note that the number of sites with significant trends for the shorter periods are small, and thus the results encumbered with more uncertainty.
 
-For particulate nitrate, nitric acid and their sum the results are more complex. The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered and the quality of the measurements are worse. 
+For particulate nitrate, nitric acid and their sum the results are more complex. The number of sites are few (especially for nitric acid, with only 6 sites), the coverage of Europe more scattered and the quality of the measurements is worse. 
 
 The modelled trends for 2000 to 2019 are all around -2-2.3\% per year for particulate nitrate, nitric acid and their sum - aligned with the results of NO$_2$ and wet deposition of oxidized nitrogen and the emissions. The observations show a somewhat smaller negative trend of around -1.6\% yr$^{-1}$ for the sum and around -2\% yr$^{-1}$ both for particulate nitrate and nitric acid. For the shorter periods, the number of sites with significant trends are very small, both in the model calculations and the observations, and thus the results more uncertain.
 However, for all the three observations, the trend in the first period (2000-2010) is smaller than the trend in the second period, whilst the model show a rather similar trend for the sum, and larger trends in the first period for the separate components.
@@ -187,7 +187,7 @@ In summary we find that oxidized nitrogen in air and precipitation has been decr
 
 
 \begin{table}
-\caption{\label{tab:no2_stat} Average absolute and relative changes in \noii concentrations }
+\caption{\label{tab:no2_stat} Absolute and relative change and corresponding confidence intervals in observed and modelled annual and seasonal aggregated \noii concentrations at the sites with 75\% data coverage  for the different time periods.The number of sites with a significant outcome is provided}
 \begin{center}
 \scalebox{0.65}{%
 \begin{tabular}{ll|ccc|cccc|cccc}
@@ -485,10 +485,11 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 \end{table}
 
 
-For the whole period, 41 and 21 sites with satisfactory data coverage have been included in the trend analysis respectively for \PM[10] and \PM[2.5]. The annual series of \PM[10] and \PM[2.5] clearly show a general concentration decrease from 2000 to 2019. In general, the model reproduces quite well observed year-to-year changes in \PM[10] and \PM[2.5], including enhanced PM levels due to meteorological conditions e.g. in 2003 (dry hot summer \citep{EMEP:PM2005}) and 2011 (dry year in Western/Central/Southern Europe \citep{EMEP:PM2013}).
+For the whole period, 36 and 18 sites with satisfactory data coverage have been included in the trend analysis respectively for \PM[10] and \PM[2.5]. The annual series of \PM[10] and \PM[2.5] clearly show a general concentration decrease from 2000 to 2019. In general, the model reproduces quite well observed year-to-year changes in \PM[10] and \PM[2.5], including enhanced PM levels due to meteorological conditions e.g. in 2003 (dry hot summer \citep{EMEP:PM2005}) and 2011 (dry year in Western/Central/Southern Europe \citep{EMEP:PM2013}).
 
-The average \PM[10] and \PM[2.5] trends derived from observational data and model simulations are negative for all considered periods, and there is quite good correspondence between average observed and simulated changes in PM. %. The overall agreement is fairly good. 
-For the period 2000-2019, the observed absolute trends are -0.37 and -0.31 \ug $yr^{-1})$ for \PM[10] and \PM[2.5]; the modelled ones are somewhat smaller, i.e. -0.28 and -0.25 \ug $yr^{-1})$ respectively (partly due to model underestimation of PM concentration). Relatively to the start year of 2000, the model simulated trends are -1.91 and -2.51 \% $yr^{-1})$ for \PM[10] and \PM[2.5], which agree well with observed -1.86 and -2.51 \% $yr^{-1})$, respectively. Significant trends have been derived from the observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively.  
+Summarizing overall results, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing for the 2000-2019 period (and for all considered here periods). In relative terms, \PM[2.5] average decreasing trend was larger than that for \PM[10]. The PM trends can be explained by decreases in the concentrations of the There is a good correspondence between observed and model simulated changes in PM. %. The overall agreement is fairly good. 
+
+For the period 2000-2019, the observed absolute trends are -0.37 and -0.31 \ug $yr^{-1})$ for \PM[10] and \PM[2.5]; the modelled ones are somewhat smaller, i.e. -0.28 and -0.25 \ug $yr^{-1})$ respectively (partly due to model underestimation of PM concentration). The model simulated relative trends are -1.91 and -2.51 \% $yr^{-1})$ for \PM[10] and \PM[2.5], which agree well with observed -1.86 and -2.51 \% $yr^{-1})$, respectively. Significant trends have been derived from the observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively.  
 
 Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed trends between the sites in comparison to modelled trend values, \textcolor{blue}{with modelled median (and mean) trends lying within 25-75\% interquartile range (IQR) of the observed ones. Modelled mean and median trends are in general closer to each other than in the observational data, implying more sites-outliers.} The model simulated the largest \PM[10] and \PM[2.5] 2000-2019 trends, both absolute and relative,  for the summer season, followed by the spring, whereas the observation results are less conclusive in this respect. However, both the observations and the model identify PM significant trends for more stations for the spring and summer seasons than for the winter-autumn. 
 
@@ -597,9 +598,5 @@ AAE is about 133 eq ha$^{-1}$ yr$^{-1}$ (2000) and 25 eq ha$^{-1}$ yr$^{-1}$ (20
 
 
 
+%DAVE MOVED TO END OF chapterTrendsECOC.tex
 
-\clearpage
-\bibliographystyle{copernicus}         % change bibliography-name after each
-\renewcommand\bibname{References}      % bibliographystyle command!
-\addcontentsline{toc}{section}{References}
-\bibliography{trends,Refs,EMEP_Reports,NILU,RefsUpdates}
