--- a/trends.bib
+++ b/trends.bib
@@ -393,7 +393,7 @@ DOI = {10.5194/amt-2019-499}
 %EMEP
 @Article{torseth2012,
 AUTHOR = {T{\o}rseth, K. and Aas, W. and Breivik, K. and Fj{\ae}raa, A. M. and Fiebig, M. and Hjellbrekke, A. G. and Lund Myhre, C. and Solberg, S. and Yttri, K. E.},
-TITLE = {Introduction to the European Monitoring and Evaluation Programme (EMEP) and observed atmospheric composition change during 1972&ndash;2009},
+TITLE = {Introduction to the European Monitoring and Evaluation Programme (EMEP) and observed atmospheric composition change during 1972-2009},
 JOURNAL = {Atmospheric Chemistry and Physics},
 VOLUME = {12},
 YEAR = {2012},
