Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -487,7 +487,7 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 For the whole period, 36 and 18 sites with satisfactory data coverage have been included in the trend analysis respectively for \PM[10] and \PM[2.5]. The annual series of \PM[10] and \PM[2.5] clearly show a general concentration decrease from 2000 to 2019. In general, the model reproduces quite well observed year-to-year changes in \PM[10] and \PM[2.5], including enhanced PM levels due to meteorological conditions e.g. in 2003 (dry hot summer \citep{EMEP:PM2005}) and 2011 (dry year in Western/Central/Southern Europe \citep{EMEP:PM2013}).
 
-Summarizing overall results, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing for the 2000-2019 period (and for all considered here periods). In relative terms, \PM[2.5] average decreasing trend was larger than that for \PM[10]. The PM trends can be explained by decreases in the concentrations of the There is a good correspondence between observed and model simulated changes in PM. %. The overall agreement is fairly good. 
+Summarizing overall results, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing for the 2000-2019 period (and for all considered here periods). In relative terms, \PM[2.5] average decreasing trend was larger than that for \PM[10]. The PM trends can be explained by decreases in the concentrations of the individual There is a good correspondence between observed and model simulated changes in PM. %. The overall agreement is fairly good. 
 
 For the period 2000-2019, the observed absolute trends are -0.37 and -0.31 \ug $yr^{-1})$ for \PM[10] and \PM[2.5]; the modelled ones are somewhat smaller, i.e. -0.28 and -0.25 \ug $yr^{-1})$ respectively (partly due to model underestimation of PM concentration). The model simulated relative trends are -1.91 and -2.51 \% $yr^{-1})$ for \PM[10] and \PM[2.5], which agree well with observed -1.86 and -2.51 \% $yr^{-1})$, respectively. Significant trends have been derived from the observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively.  
 
