Update on Overleaf.

--- a/chapterTrendsSandN.tex
+++ b/chapterTrendsSandN.tex
@@ -6,14 +6,13 @@
 \old{TODO}
 
 \section{\label{sec:Trends_introduction}Introduction and background}
-At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012.
+At its thirty-ninth session (Geneva, 9–13 December 2019), the Executive Body launched the review of the Protocol to Abate Acidification, Eutrophication and Ground-level Ozone (the Gothenburg Protocol) as amended in 2012. In order to assess  the progress made towards achieving the environmental and health objectives of the Protocol, a
+list of questions was given to the subsidiary bodies of the Air Convention. Several of these questions were related to the trends of air pollution in Europe. 
 
-In order to assess  the progress made towards achieving the environmental and health objectives of the Protocol, a
-list of questions was given to the subsidiary bodies of the Air Convention.
+In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019 based on long term observational data from the EMEP network as well as EMEP MSC-W model calculations. We analyze trends in air quality for ozone, sulphur dioxide, particulate matter (and their species; sulphate, nitrate, ammonium, EC and OC) oxidized and reduced as well as wet deposition of sulphur and nitrogen species. In addition, we present trends in some indicators of health and vegetation risk (SOMO35, exceednaces of WHO guideline values for PM2.5, exceedances of critical loads for acidification and eutrophication for every 5 year since 2000).
 
-Several of the questions were related to the trends of air pollution in Europe, and to what extent they follow the reported trends in emissions
+Unfortunately, the EMEP observational network is dominated by sites in western Europe and has hardly any coverage in the EECCA & western Balkan area. 
 
-In this chapter, we present an assessment of the trends in air pollution in Europe for the period 2000-2019
 
 *Domain is basically western Europe, no EECCA
 *That we look from 2000 to get sign trends, not 2005
@@ -487,9 +486,11 @@ Period & Seasons &           total & sign.(obs.) & sign.(mod.) &                
 
 For the whole period, 36 and 18 sites with satisfactory data coverage have been included in the trend analysis respectively for \PM[10] and \PM[2.5]. The annual series of \PM[10] and \PM[2.5] clearly show a general concentration decrease from 2000 to 2019. In general, the model reproduces quite well observed year-to-year changes in \PM[10] and \PM[2.5], including enhanced PM levels due to meteorological conditions e.g. in 2003 (dry hot summer \citep{EMEP:PM2005}) and 2011 (dry year in Western/Central/Southern Europe \citep{EMEP:PM2013}).
 
-Summarizing overall results, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing for the 2000-2019 period (and for all considered here periods). In relative terms, \PM[2.5] average decreasing trend was larger than that for \PM[10]. The PM trends can be explained by decreases in the concentrations of the individual components due to emission reductions, with \PM[10] being There is a good correspondence between observed and model simulated changes in PM. %. The overall agreement is fairly good. 
+Summarizing overall results, the average \PM[10] and \PM[2.5] trends, derived from observational data and model simulations, are decreasing for the 2000-2019 period (and for all considered here periods). In relative terms, \PM[2.5] average decreasing trend was larger than that for \PM[10]. The PM trends can be explained by decreases in the concentrations of the individual components due to emission reductions, with \PM[10] trends experiencing larger disturbances due to natural contribution in the coarse fraction. We find a good correspondence between observed and model simulated trends in PM concentrations at the considered sites. A more detailed discussion of PM trends follows below.
+In the period of 2000-2019, the average observed \PM[10] trends are -0.37 \ug $yr^{-1}$, or -1.86 \% $yr^{-1}$ in relative terms. The corresponding \PM[10] trends from model simulations are -0.28 \ug $yr^{-1}$ and -1.91 \% $yr^{-1}$.
 
-For the period 2000-2019, the observed absolute trends are -0.37 and -0.31 \ug $yr^{-1})$ for \PM[10] and \PM[2.5]; the modelled ones are somewhat smaller, i.e. -0.28 and -0.25 \ug $yr^{-1})$ respectively (partly due to model underestimation of PM concentration). The model simulated relative trends are -1.91 and -2.51 \% $yr^{-1})$ for \PM[10] and \PM[2.5], which agree well with observed -1.86 and -2.51 \% $yr^{-1})$, respectively. Significant trends have been derived from the observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively.  
+
+-0.37 and -0.31 \ug $yr^{-1}$ for \PM[10] and \PM[2.5]; the modelled ones are somewhat smaller, i.e. -0.28 and -0.25 \ug $yr^{-1}$ respectively (partly due to model underestimation of PM concentration). The model simulated relative trends are -1.91 and -2.51 \% $yr^{-1}$ for \PM[10] and \PM[2.5], which agree well with observed -1.86 and -2.51 \% $yr^{-1})$, respectively. Significant trends have been derived from the observational data for 80 \% of sites for \PM[10] and 97 \% of sites for \PM[2.5]; the model simulates significant trends for more sites, namely 97 and 100 \% respectively.  
 
 Figure \ref{fig:pm_trends} reveals a considerably larger variation of observed trends between the sites in comparison to modelled trend values, \textcolor{blue}{with modelled median (and mean) trends lying within 25-75\% interquartile range (IQR) of the observed ones. Modelled mean and median trends are in general closer to each other than in the observational data, implying more sites-outliers.} The model simulated the largest \PM[10] and \PM[2.5] 2000-2019 trends, both absolute and relative,  for the summer season, followed by the spring, whereas the observation results are less conclusive in this respect. However, both the observations and the model identify PM significant trends for more stations for the spring and summer seasons than for the winter-autumn. 
 
